<resources>
    <string name="app_name">Autometa</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <!--<string name="skip">SKIP</string>-->
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Geo Reminders</string>
    <string name="slide_1_desc">Location based reminders to help you remember buying milk and bread when you\'re near a grocery store!</string>

    <string name="slide_2_title">Text Automation</string>
    <string name="slide_2_desc">Text your friends auto-magically when you\'re 100 meters away or 50 kilometers away to notify them of your arrival at the cafe!</string>

    <string name="slide_3_title">Snooze / Cancel</string>
    <string name="slide_3_desc">Get notified with a 60 second timer before automation is triggered with the option to snooze/cancel it!</string>

    <string name="slide_4_title">Grant Permissions</string>
    <string name="slide_4_desc">Autometa needs permissions from you in order to trigger geo-based reminders and automation. </string>
    <!--<string name="slide_4_title">Email Automation</string>
    <string name="slide_4_desc">Email your team about a delay in meeting if you\'re more than 10 minutes away from your meeting location!</string>-->

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>

    <string name="play_again">Play Again</string>

    <string name="title_activity_splash">SplashActivity</string>

    <string name="facebook_app_id">609163726125795</string>
    <string name="fb_login_protocol_scheme">fb609163726125795</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_home">Home</string>
    <string name="title_remind">Reminder</string>
    <string name="title_notify">Notify</string>
    <string name="title_activity_create">@string/app_name</string>
    <string name="create_label1">I want to</string>
    <string name="reminder_desc">Enter reminder description</string>
    <string name="create_label2">to</string>
    <string name="create_label3">when I am</string>
    <string name="create_label4">from</string>
    <string name="location_category_lbl">Find By Category</string>
    <string name="location_picker_lbl">Pick Manually</string>
    <string name="btn_location_lbl">Location</string>
    <string name="search_lbl">Search</string>
    <string name="confirm_lbl">Confirm</string>
    <string name="title_activity_plot">View All Triggers</string>
    <string name="title_activity_maps2">Map</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="insufficient_permissions">Permission Denied.</string>
    <string name="settings">Settings</string>

    <!-- Geofences -->
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <!-- Geofence errors -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="cancel_btn_lbl">Defer</string>
    <string name="infowindow_tip">PRESS AND HOLD HERE TO SET UP A GEOFENCE</string>
    <string name="grant_permissions">Grant Permissions</string>

</resources>
